# Universal-Convertor

./: App.cpp  App.h  BigInt.h  CMakeLists.txt  Fraction.h  MegaFraction.h  MegaInt.h  header.h  main.cpp  solve.h
